; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/s5c73m3/extr_s5c73m3-spi.c_s5c73m3_spi_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/s5c73m3/extr_s5c73m3-spi.c_s5c73m3_spi_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s5c73m3 = type { %struct.spi_device* }
%struct.spi_device = type { i32 }

@SPI_DIR_RX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @s5c73m3_spi_read(%struct.s5c73m3* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.s5c73m3*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.spi_device*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.s5c73m3* %0, %struct.s5c73m3** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %16 = load %struct.s5c73m3*, %struct.s5c73m3** %6, align 8
  %17 = getelementptr inbounds %struct.s5c73m3, %struct.s5c73m3* %16, i32 0, i32 0
  %18 = load %struct.spi_device*, %struct.spi_device** %17, align 8
  store %struct.spi_device* %18, %struct.spi_device** %10, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %9, align 4
  %21 = udiv i32 %19, %20
  store i32 %21, i32* %11, align 4
  %22 = load i32, i32* %8, align 4
  %23 = load i32, i32* %9, align 4
  %24 = urem i32 %22, %23
  store i32 %24, i32* %12, align 4
  store i32 0, i32* %14, align 4
  store i32 0, i32* %15, align 4
  store i32 0, i32* %13, align 4
  br label %25

25:                                               ; preds = %46, %4
  %26 = load i32, i32* %13, align 4
  %27 = load i32, i32* %11, align 4
  %28 = icmp ult i32 %26, %27
  br i1 %28, label %29, label %49

29:                                               ; preds = %25
  %30 = load %struct.spi_device*, %struct.spi_device** %10, align 8
  %31 = load i8*, i8** %7, align 8
  %32 = load i32, i32* %14, align 4
  %33 = zext i32 %32 to i64
  %34 = getelementptr i8, i8* %31, i64 %33
  %35 = load i32, i32* %9, align 4
  %36 = load i32, i32* @SPI_DIR_RX, align 4
  %37 = call i32 @spi_xmit(%struct.spi_device* %30, i8* %34, i32 %35, i32 %36)
  store i32 %37, i32* %15, align 4
  %38 = load i32, i32* %15, align 4
  %39 = icmp slt i32 %38, 0
  br i1 %39, label %40, label %42

40:                                               ; preds = %29
  %41 = load i32, i32* %15, align 4
  store i32 %41, i32* %5, align 4
  br label %62

42:                                               ; preds = %29
  %43 = load i32, i32* %9, align 4
  %44 = load i32, i32* %14, align 4
  %45 = add i32 %44, %43
  store i32 %45, i32* %14, align 4
  br label %46

46:                                               ; preds = %42
  %47 = load i32, i32* %13, align 4
  %48 = add i32 %47, 1
  store i32 %48, i32* %13, align 4
  br label %25

49:                                               ; preds = %25
  %50 = load i32, i32* %12, align 4
  %51 = icmp ugt i32 %50, 0
  br i1 %51, label %52, label %61

52:                                               ; preds = %49
  %53 = load %struct.spi_device*, %struct.spi_device** %10, align 8
  %54 = load i8*, i8** %7, align 8
  %55 = load i32, i32* %14, align 4
  %56 = zext i32 %55 to i64
  %57 = getelementptr i8, i8* %54, i64 %56
  %58 = load i32, i32* %12, align 4
  %59 = load i32, i32* @SPI_DIR_RX, align 4
  %60 = call i32 @spi_xmit(%struct.spi_device* %53, i8* %57, i32 %58, i32 %59)
  store i32 %60, i32* %5, align 4
  br label %62

61:                                               ; preds = %49
  store i32 0, i32* %5, align 4
  br label %62

62:                                               ; preds = %61, %52, %40
  %63 = load i32, i32* %5, align 4
  ret i32 %63
}

declare dso_local i32 @spi_xmit(%struct.spi_device*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
